# lama_featurenav

anj_featurenav/: CMakeLists.txt  package.xml
anj_featurenav/include/anj_featurenav/: jockey.h
anj_featurenav/src/: anj_featurenav_node.cpp  jockey.cpp
featurenav_base/: CMakeLists.txt  package.xml
featurenav_base/include/featurenav_base/: ajockey.h  anjockey.h  njockey.h  potential_landmark.h  segment_learner.h  typedef.h
featurenav_base/src/: ajockey.cpp  anjockey.cpp  njockey.cpp
